# C-Plus-Plus

./: .clang-format  .clang-tidy  .cpplint  .gitignore  .gitpod.dockerfile  .gitpod.yml  .travis.yml  02052001.md  2d sorted matrix  Aho-Corasick algorithm.cpp  Alphatterns.cpp  Anti_prime.cpp  Area of Shapes calculator  ArrayLeftRotation.cpp  Array_left_rotation.cpp  Array_right_rotation.cpp  BigInteger Class.cpp  Binary_Search_Recursive  Binary_search.cpp  BingSiteAuth.xml  Book Management System  Boyer_MooreAlgorithm.cpp  Branch and Bound n_queen.cpp  Breast_Cancer_model.ipynb  Bubble Sort.cpp  BubbleSort.cpp  CALCI.CPP  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION.md  Circle sort code  Circular Queue Using Array.cpp  CircularLinkedList - .cpp  CodingGuidelines.md  DIRECTORY.md  Decimal To Binary.cpp  Decimal to Roman Numeral.cpp  Dijkstra  (+726 more)
.github/: CODEOWNERS  pull_request_template.md  stale.yml
.scripts/: validate_filenames.py
Algorithm_header/: all_of.cpp  any_of.cpp  fill.cpp  find_if_not.cpp  for_each.cpp  max.cpp  min.cpp  none_of.cpp  swap.cpp
Array/: Array Left Rotation.cpp
Arrays/: RunningSumOfArray.cpp
Backtracking/: Graph Coloring.cpp  Hamilton.cpp  Knight_travel.cpp  KnightsTour.cpp  N Queens.cpp  Rat_maze.cpp  Subset Sum  knight-tour.cpp  knight_tour.cpp  lexicographical_subsets.cpp  lexicogrphical_gen_permutation.cpp  minimax.cpp  subset.cpp  sudoku_solve.cpp  tug-of-war.cpp
Bankers algorithm/: Bankers.cpp  readme.md
Binary Trees/: Diameter_n.cpp  Diametern2.cpp  DiameterofTree.cpp  Inorder.cpp  Leastcommon.cpp  Postorder.cpp  PreorderTraversal.cpp  TransformtoSumTree.cpp  buildTree.cpp  countNodes.cpp  dupilcatenodes.cpp  heigthTree.cpp  invertBinaryTree.cpp  kthAncestor.cpp  levelOrder.cpp  minDistance.cpp  subtreePresent.cpp  sumNodes.cpp  topView.cpp
C++ reverse string without using function/: c++ reverse sstring without using function.txt  reverse_string.cpp
Combinatorics/: pascal_traingle.cpp
Computer Oriented Statistical Methods/: Bisection_method.CPP  Gaussian_elimination.cpp  Newton_Raphson.CPP  Secant_method.CPP  false-position.CPP  successive_approximation.CPP
Conversions/: Decimal To Hexadecimal .cpp
Cstdlib/: abs.cpp  atof.cpp  atoi.cpp  atol.cpp
Cstring/: strcat.cpp  strcmp.cpp  strcpy.cpp  strlen.cpp  strspn.cpp
DIJAKSTRA/: dijsktra.cpp
Data Structure/: AVLtree alternative.cpp  AVLtree.cpp  BTree.cpp  Binary Search Tree.cpp  BinaryTree.cpp  Binaryheap.cpp  CircularSinglyLinkedList.cpp  Circular_linked_list.cpp  ConvertTreeToList.cpp  DSU.cpp  Dequeue  Digraph.cpp  DisjointSets.cpp  Double Ended Queue  Doubly Linked List.cpp  DoublyLinked_list.cpp  Linked List.cpp  Linked_List_Insertion_Sort.cpp  MorrisInorder.cpp  Persistent Segment tree.cpp  PigeonHole sorting algorithm.cpp  PriorityQueue.cpp  Queue Using Linked List.cpp  Queue.cxx  QueueArray.cxx  RANGE_SUM_SEGMENT_TREE_ITERATIVELY.cpp  RBT insertion  RBTree.cpp  RedBlackTree.cpp  ReverseLinkedList.cpp  SegmentTree.cpp  (+28 more)
Data Structure and Algorithm/: README.md
cpu_scheduling_algorithms/: BankersAlgo.cpp  CMakeLists.txt  Highest_Response_Ratio_Next_HRRN.cpp  Least_Recently_Used_scheduling.cpp  PriorityScheduling.cpp  Priority_Scheduling_Array.cpp  Priority_Scheduling_LinkedList.cpp  Priority_Scheduling_Linked_List.cpp  Roundrobin_scheduling.cpp  SJF_Algorithm.cpp  Shortest_Job_first_scheduling_algorithm  all_cpu_algos_in_one_program  bankers_algorithm.cpp  fcfs_scheduling.cpp  first_come_first_serve.cpp  job_sequencing.cpp  non_preemptive_priority_scheduling.cpp  non_preemptive_sjf_scheduling.cpp  preemptive_priority_scheduling.cpp  priority_scheduling.cpp  priotity_scheduling.cpp  robin_round.cpp  round_robin.cpp  round_robin_algorithm.cpp  round_robin_scheduling.cpp  rr_scheduling.cpp  shortest_job_first.cpp  shortest_remaining_time_first.cpp  sjf_scheduling.cpp  srtf.cpp
data_structures/stk/: CMakeLists.txt  main.cpp  stack.cpp  stack.h
graphics/: 1_DDA_angorithm.cpp  CMakeLists.txt  Transformation in 2D triangle.cpp  dda.cpp  histogram.cpp  spirograph.cpp  spirograph_0.3_0.75_10.csv  tea_shop.cpp  transformation_in_2D_triangle.cpp
math/: Add Two Matrix Using Multi-dimensional Arrays  Armstrong Number  BostonNumber.cpp  CMakeLists.txt  Chinese Remainder Theorem  Evaluate_Postfix_Ops.cpp  GameOnPermutation.cpp  Gram_Schmidt.cpp  LCM_GCD.cpp  Love Triangle  Magic Square  N-bonacci.cpp  Postfix_Calculator.cpp  README.md  Ratinmaze.cpp  Theatre_Square.cpp  Toeplitz_Matrix.cpp  age_calculator.cpp  aliquot_sum.cpp  approximate_pi.cpp  area.cpp  area_of_shapes.cpp  armstrong_number.cpp  armstrong_number_shiwans.cpp  average  basic_stats.cpp  bin_to_dec.cpp  binary_exponent.cpp  binary_exponentiation.cpp  binomial.cpp  binomial_calculate.cpp  binomial_coefficients.cpp  bisection.cpp  bisection_method.cpp  boston.cpp  boston_numbers.cpp  calculator.cpp  carmichael  carmichael.cpp  check_amicable_pair.cpp  (+145 more)
math/perimeter.dSYM/Contents/: Info.plist
math/perimeter.dSYM/Contents/Resources/DWARF/: perimeter
numerical_methods/: Arithmetic_on_Big_Integers.cpp  CMakeLists.txt  Inverse_fast_fourier_transform.cpp  Monte_Carlo_simulation_PI  Monte_Carlo_simulation_PI.cpp  Secant_method.cpp  armijo_backtrack.cpp  babylonian_method.cpp  bisection_method.cpp  brent_method_extrema.cpp  build_array.cpp  composite_simpson_rule.cpp  determinant.cpp  determinant_using_gaussElimination.cpp  durand_kerner_roots.cpp  false_position.cpp  fast_fourier_transform.cpp  fast_fourier_transform2.cpp  gauus_jacobi_method.cpp  golden_search_extrema.cpp  gram_schmidt.cpp  inverse_fast_fourier_transform.cpp  inverse_fast_fourier_transform2.cpp  jacobi_method.cpp  lagrange.cpp  lagranges_interpolation.cpp  lu_decompose.cpp  lu_decomposition.h  midpoint_integral_method.cpp  midpoint_integral_method.hpp  newton_forward.cpp  newton_raphson_alternate_using_files.cpp  newton_raphson_method.cpp  ode_forward_euler.cpp  ode_midpoint_euler.cpp  ode_semi_implicit_euler.cpp  ordinary_least_squares_regressor.cpp  qr_decompose.h  qr_decomposition.cpp  qr_eigen_values.cpp  (+6 more)
(+8328 files in other folders)
